--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@wordpress/base-styles": "^1.4.0",
+    "@wordpress/block-editor": "^3.7.1",
+    "@wordpress/block-library": "^2.14.1",
+    "@wordpress/components": "^9.2.1",
+    "@wordpress/element": "^2.11.0",
+    "@wordpress/format-library": "^1.14.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
